BuildHughes/translation-tool/inputs/source_meta/objects/Common_RedTextMessageMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will be used for generating dynamic query.</description>
    <fields>
        <fullName>IsNull__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether to check null condition or not</description>
        <label>IsNull</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To check for static values. Note : If this is true the Mapping Object field should be filled.</description>
        <inlineHelpText>To check for static values. To check for static values. Note : If this is true the Mapping Object field should be filled.</inlineHelpText>
        <label>IsValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mapping_Object_Field__c</fullName>
        <label>Mapping Object Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_Object_Name__c</fullName>
        <label>Mapping Object Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spcl_Instruction_Field__c</fullName>
        <label>Spcl Instruction Field</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isBoolean__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the field is a boolean or not. Note : If this is true the condition will be checked based on the operator.</description>
        <inlineHelpText>Check the field is a boolean or not. Note : If this is true the condition will be checked based on the operator.</inlineHelpText>
        <label>isBoolean</label>
        <type>Checkbox</type>
    </fields>
    <label>Common Red Text Message Mapping</label>
</CustomObject>